# physics_exps

./: CMakeLists.txt  design.md  main.cpp  todo.md  vis.mac
config/: CevnsConfig.ini
include/detectors/: Detector.h  DetectorMaker.h  GenericSD.h  MaterialGetter.h
include/detectors/specific_detectors/: DuneFDDetector.h
include/events/: Event.h  EventMaker.h  Generator.h
include/events/specific_events/: CevnsEvent.h
include/events/specific_generators/: CevnsGenerator.h
include/events/specific_physics/: CevnsPhysics.h
include/instance/: Instance.h  SimpleUI.h  instance.h  simpleUI.h
include/utils/: CppUtils.h  MathUtils.h
src/detectors/: Detector.cpp  DetectorMaker.cpp  GenericSD.cpp  MaterialGetter.cpp
src/detectors/specific_detectors/: DuneFDDetector.cpp
src/events/: Event.cpp  EventMaker.cpp  Generator.cpp
src/events/specific_events/: CevnsEvent.cpp
src/events/specific_generators/: CevnsGenerator.cpp
src/events/specific_physics/: CevnsPhysics.cpp
src/instance/: Instance.cpp  SimpleUI.cpp  instance.cpp  simpleUI.cpp
src/utils/: MathUtils.cpp
